// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmarkLevel renders 0 1`] = `
Array [
  .c0 {
  bookmark-level: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 0;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders function 1`] = `
Array [
  .c0 {
  bookmark-level: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: has;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: has;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders invalid theme path 1`] = `
Array [
  .c0 {
  bookmark-level: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders negative number 1`] = `
Array [
  .c0 {
  bookmark-level: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    bookmark-level: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-level: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    bookmark-level: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-level: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-level: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    bookmark-level: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    bookmark-level: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    bookmark-level: July;
  }
}

@media April {
  .c0 {
    bookmark-level: August;
  }
}

@media January {
  .c0 {
    bookmark-level: September;
  }
}

@media April {
  .c0 {
    bookmark-level: November;
  }
}

@media June {
  .c0 {
    bookmark-level: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    bookmark-level: July;
  }
}

@media April {
  .c0 {
    bookmark-level: August;
  }
}

@media January {
  .c0 {
    bookmark-level: September;
  }
}

@media April {
  .c0 {
    bookmark-level: November;
  }
}

@media June {
  .c0 {
    bookmark-level: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-level: January;
  }
}

@media April {
  .c0 {
    bookmark-level: December;
  }
}

@media January {
  .c0 {
    bookmark-level: April;
  }
}

@media April {
  .c0 {
    bookmark-level: May;
  }
}

@media June {
  .c0 {
    bookmark-level: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    bookmark-level: January;
  }
}

@media April {
  .c0 {
    bookmark-level: December;
  }
}

@media January {
  .c0 {
    bookmark-level: April;
  }
}

@media April {
  .c0 {
    bookmark-level: May;
  }
}

@media June {
  .c0 {
    bookmark-level: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders postitive number 1`] = `
Array [
  .c0 {
  bookmark-level: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders string 1`] = `
Array [
  .c0 {
  bookmark-level: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: July;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: June;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: June;
}

<div
    className="c0"
  />,
]
`;

exports[`bookmarkLevel renders valid theme path 1`] = `
Array [
  .c0 {
  bookmark-level: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  bookmark-level: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
